Removing the too much "you"s fix #320
 - Changing the texts to remove "you"s.
 - Using a placeholder text for instrument field.
 - Fixing a small unaligned layout in ninjam window in mini mode.

--- a/src/resources/jamtaba.css
+++ b/src/resources/jamtaba.css
@@ -1103,6 +1103,14 @@ LocalTrackGroupView  #toolButton {
 LocalTrackGroupView   #toolButton:hover{
     background-image: url(':/images/gear-hover.png');
 }
+
+LocalTrackGroupView #groupNameField
+{
+    font-size: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
+    margin: 0px;
+}
 /* ++++++++++++++++++++++++++++++++++ */
 
 QLabel#labelPanR, QLabel#labelPanL{
